test/fail/fail_multiple/identity/src/Identity.hx
package;

class Identity {
	public static function funA(n:Int):Int {
		return -n;
	}
	public static function funB(n:Int):Int {
		return n*n;
	}
}
